src/components/carousel/carousel.module.css
.carousel {
  display: grid;
  grid-template-columns: 80px 1fr 80px;
  grid-template-rows: 1fr;
  align-items: center;
  width: 100%;
  height: 100%;
  position: relative;
}

.gallery {
  grid-area: 1 / 1 / 2 / 4; /* Span all 3 columns */
  display: flex;
  align-items: center;
  gap: 2rem;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  padding-inline: calc(50% - 140px); /* (50% - 280px/2) */
  -ms-overflow-style: none;
  scrollbar-width: none;
  height: 400px;
  min-height: 0;
}

.prev {
  grid-area: 1 / 1 / 2 / 2; /* First column */
  justify-self: center;
}

.next {
  grid-area: 1 / 3 / 2 / 4; /* Third column */
  justify-self: center;
}

@media (min-width: 640px) {
  .gallery {
    padding-inline: calc(50% - 180px); /* (50% - 360px/2) */
  }
}

.gallery::-webkit-scrollbar {
  display: none;
}

